--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,81 +1,199 @@
 ---
-import Layout from '../layouts/Layout.astro';
-import Card from '../components/Card.astro';
+import Layout from "../layouts/Layout.astro"
+import Footer from "../components/Footer.astro"
 ---
 
-<Layout title="Welcome to Astro.">
-	<main>
-		<h1>Welcome to <span class="text-gradient">Astro</span></h1>
-		<p class="instructions">
-			To get started, open the directory <code>src/pages</code> in your project.<br />
-			<strong>Code Challenge:</strong> Tweak the "Welcome to Astro" message above.
-		</p>
-		<ul role="list" class="link-card-grid">
-			<Card
-				href="https://docs.astro.build/"
-				title="Documentation"
-				body="Learn how Astro works and explore the official API docs."
-			/>
-			<Card
-				href="https://astro.build/integrations/"
-				title="Integrations"
-				body="Supercharge your project with new frameworks and libraries."
-			/>
-			<Card
-				href="https://astro.build/themes/"
-				title="Themes"
-				body="Explore a galaxy of community-built starter themes."
-			/>
-			<Card
-				href="https://astro.build/chat/"
-				title="Community"
-				body="Come say hi to our amazing Discord community. ❤️"
-			/>
-		</ul>
-	</main>
+<Layout title='Miguel Meza - Solution Architect.'>
+  <main>
+    <div class='bg-gray-900'>
+      <div class='mx-auto max-w-7xl sm:px-6 lg:px-8'>
+        <div
+          class='relative isolate overflow-hidden bg-gray-900 py-20 px-6 sm:rounded-3xl sm:py-24 sm:px-10 lg:py-24 xl:px-0'
+        >
+          <div
+            class='mx-auto grid max-w-2xl grid-cols-1 gap-y-16 gap-x-8 sm:gap-y-20 lg:mx-0 lg:max-w-none lg:grid-cols-2 lg:items-start lg:gap-y-0'
+          >
+            <div class='lg:row-start-2 lg:max-w-lg'>
+              <h1
+                class='text-3xl font-bold tracking-tight text-white sm:text-4xl'
+              >
+                I’m Miguel Meza - A <span class='underline'
+                  >Solution Architect</span
+                > in Chile, Passionate About Technology and Innovation.
+              </h1>
+              <p class='mt-6 text-lg leading-8 text-gray-300'>
+                I’m Miguel Meza, a dedicated Solution Architect from Valdivia,
+                Chile. I’ve always been passionate about technology and how it
+                can positively impact our lives. I hold dual degrees in
+                <span class='underline'>Industrial Civil Engineering</span> and <span
+                  class='underline'>Computer Engineering</span
+                >, and I’ve worked in various sectors. Over the years, I’ve
+                taken on different roles, such as Software Developer, Technical
+                Leader & manager, and of course, Solution Architect.
+              </p>
+              <p class='mt-6 text-lg leading-8 text-gray-300'>
+                I co-founded <a
+                  href='https://cimadent.cl'
+                  target='_blank'
+                  class='font-medium underline leading-6'>CIMADent</a
+                >, a software solution that helps dental clinics and independent
+                professionals manage patients more efficiently. I’m comfortable
+                with JavaScript and proficient in <span class='underline'
+                  >Dart, Java, PHP, and Golang</span
+                >. I’ve had the opportunity to work with many frameworks, but I
+                will keep you from the details.
+              </p>
+              <p class='mt-6 text-lg leading-8 text-gray-300'>
+                I’m also really into productivity. I’ve developed techniques
+                that help me get the most out of our limited time, and I love
+                sharing my experiences and knowledge with others. That’s why I
+                started my blog, writing about productivity tips based on my
+                journey.
+              </p>
+              <p class='mt-6 text-lg leading-8 text-gray-300'>
+                Besides, I run a consultancy where we work with various clients
+                to develop software solutions tailored to their specific needs
+                while maintaining high-quality standards. If you want to learn
+                more about what I do or would like to collaborate on a project,
+                please visit my website at Dukes.dev.
+              </p>
+              <p class='mt-6 text-lg leading-8 text-gray-300'>
+                I’m always excited to connect with new people, especially those
+                who share my passion for technology and innovation. So, whether
+                you’re a technical recruiter or someone looking to hire a
+                Solution Architect in Chile, don’t hesitate to reach out. Let’s
+                work together to create something unique!
+              </p>
+            </div>
+            <img
+              src='/assets/me.png'
+              alt='Miguel Meza - Solution and Solution Architect'
+              class='relative -z-20 min-w-full max-w-xl rounded-xl shadow-xl lg:row-span-4 lg:w-[64rem]'
+              width='2432'
+              height='1442'
+            />
+            <div
+              class='max-w-xl lg:row-start-3 lg:mt-10 lg:max-w-md lg:border-t lg:border-white/10 lg:pt-10'
+            >
+              <dl
+                class='max-w-xl space-y-8 text-base leading-7 text-gray-300 lg:max-w-none'
+              >
+                <div class='relative'>
+                  <a
+                    href='https://www.instagram.com/boadude/'
+                    target='_blank'
+                    class='font-medium leading-6 text-blue-500'
+                  >
+                    <dt class='ml-9 inline-block font-medium text-white'>
+                      <svg
+                        class='absolute top-1 left-1 h-5 w-5 text-blue-500'
+                        viewBox='0 0 24 24'
+                        fill='currentColor'
+                        aria-hidden='true'
+                        ><path
+                          d='M12 0C8.74 0 8.333.015 7.053.072 5.775.132 4.905.333 4.14.63c-.789.306-1.459.717-2.126 1.384S.935 3.35.63 4.14C.333 4.905.131 5.775.072 7.053.012 8.333 0 8.74 0 12s.015 3.667.072 4.947c.06 1.277.261 2.148.558 2.913.306.788.717 1.459 1.384 2.126.667.666 1.336 1.079 2.126 1.384.766.296 1.636.499 2.913.558C8.333 23.988 8.74 24 12 24s3.667-.015 4.947-.072c1.277-.06 2.148-.262 2.913-.558.788-.306 1.459-.718 2.126-1.384.666-.667 1.079-1.335 1.384-2.126.296-.765.499-1.636.558-2.913.06-1.28.072-1.687.072-4.947s-.015-3.667-.072-4.947c-.06-1.277-.262-2.149-.558-2.913-.306-.789-.718-1.459-1.384-2.126C21.319 1.347 20.651.935 19.86.63c-.765-.297-1.636-.499-2.913-.558C15.667.012 15.26 0 12 0zm0 2.16c3.203 0 3.585.016 4.85.071 1.17.055 1.805.249 2.227.415.562.217.96.477 1.382.896.419.42.679.819.896 1.381.164.422.36 1.057.413 2.227.057 1.266.07 1.646.07 4.85s-.015 3.585-.074 4.85c-.061 1.17-.256 1.805-.421 2.227-.224.562-.479.96-.899 1.382-.419.419-.824.679-1.38.896-.42.164-1.065.36-2.235.413-1.274.057-1.649.07-4.859.07-3.211 0-3.586-.015-4.859-.074-1.171-.061-1.816-.256-2.236-.421-.569-.224-.96-.479-1.379-.899-.421-.419-.69-.824-.9-1.38-.165-.42-.359-1.065-.42-2.235-.045-1.26-.061-1.649-.061-4.844 0-3.196.016-3.586.061-4.861.061-1.17.255-1.814.42-2.234.21-.57.479-.96.9-1.381.419-.419.81-.689 1.379-.898.42-.166 1.051-.361 2.221-.421 1.275-.045 1.65-.06 4.859-.06l.045.03zm0 3.678c-3.405 0-6.162 2.76-6.162 6.162 0 3.405 2.76 6.162 6.162 6.162 3.405 0 6.162-2.76 6.162-6.162 0-3.405-2.76-6.162-6.162-6.162zM12 16c-2.21 0-4-1.79-4-4s1.79-4 4-4 4 1.79 4 4-1.79 4-4 4zm7.846-10.405c0 .795-.646 1.44-1.44 1.44-.795 0-1.44-.646-1.44-1.44 0-.794.646-1.439 1.44-1.439.793-.001 1.44.645 1.44 1.439z'
+                        ></path></svg
+                      >
+                      Follow on Instagram.
+                    </dt>
+                  </a>
+                </div>
+
+                <div class='relative'>
+                  <a
+                    href='https://github.com/boadude'
+                    target='_blank'
+                    class='font-medium leading-6 text-blue-500'
+                  >
+                    <dt class='ml-9 inline-block font-medium text-white'>
+                      <svg
+                        class='absolute top-1 left-1 h-5 w-5 text-blue-500'
+                        viewBox='0 0 24 24'
+                        fill='currentColor'
+                        aria-hidden='true'
+                      >
+                        <path
+                          d='M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12'
+                        ></path>
+                      </svg>
+                      Follow on Github
+                    </dt>
+                  </a>
+                </div>
+
+                <div class='relative'>
+                  <a
+                    href='https://www.linkedin.com/in/boadude/'
+                    target='_blank'
+                    class='font-medium leading-6 text-blue-500'
+                  >
+                    <dt class='ml-9 inline-block font-medium text-white'>
+                      <svg
+                        class='absolute top-1 left-1 h-5 w-5 text-blue-500'
+                        viewBox='0 0 24 24'
+                        fill='currentColor'
+                        aria-hidden='true'
+                      >
+                        <path
+                          d='M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z'
+                        ></path>
+                      </svg>
+                      Follow on LinkedIn
+                    </dt>
+                  </a>
+                </div>
+
+                <div class='relative'>
+                  <a
+                    href='https://medium.com/@boadude'
+                    target='_blank'
+                    class='font-medium leading-6 text-blue-500'
+                  >
+                    <dt class='ml-9 inline-block font-medium text-white'>
+                      <svg
+                        class='absolute top-1 left-1 h-5 w-5 text-blue-500'
+                        viewBox='0 0 24 24'
+                        fill='currentColor'
+                        aria-hidden='true'
+                      >
+                        <path
+                          d='M13.54 12a6.8 6.8 0 01-6.77 6.82A6.8 6.8 0 010 12a6.8 6.8 0 016.77-6.82A6.8 6.8 0 0113.54 12zM20.96 12c0 3.54-1.51 6.42-3.38 6.42-1.87 0-3.39-2.88-3.39-6.42s1.52-6.42 3.39-6.42 3.38 2.88 3.38 6.42M24 12c0 3.17-.53 5.75-1.19 5.75-.66 0-1.19-2.58-1.19-5.75s.53-5.75 1.19-5.75C23.47 6.25 24 8.83 24 12z'
+                        ></path>
+                      </svg>
+                      Follow on Medium
+                    </dt>
+                  </a>
+                </div>
+
+                <div class='relative'>
+                  <a
+                    href='mailto:yo@miguelmeza.cl'
+                    target='_blank'
+                    class='font-medium leading-6 text-blue-500'
+                  >
+                    <dt class='ml-9 inline-block font-medium text-white'>
+                      <svg
+                        class='absolute top-1 left-1 h-5 w-5 text-blue-500'
+                        viewBox='0 0 24 24'
+                        fill='currentColor'
+                        aria-hidden='true'
+                      >
+                        <path
+                          d='M24 5.457v13.909c0 .904-.732 1.636-1.636 1.636h-3.819V11.73L12 16.64l-6.545-4.91v9.273H1.636A1.636 1.636 0 0 1 0 19.366V5.457c0-2.023 2.309-3.178 3.927-1.964L5.455 4.64 12 9.548l6.545-4.91 1.528-1.145C21.69 2.28 24 3.434 24 5.457z'
+                        ></path>
+                      </svg>
+                      yo@miguelmeza.cl
+                    </dt>
+                  </a>
+                </div>
+              </dl>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </main>
+  <Footer />
 </Layout>
 
-<style>
-	main {
-		margin: auto;
-		padding: 1.5rem;
-		max-width: 60ch;
-	}
-	h1 {
-		font-size: 3rem;
-		font-weight: 800;
-		margin: 0;
-	}
-	.text-gradient {
-		background-image: var(--accent-gradient);
-		-webkit-background-clip: text;
-		-webkit-text-fill-color: transparent;
-		background-size: 400%;
-		background-position: 0%;
-	}
-	.instructions {
-		line-height: 1.6;
-		margin: 1rem 0;
-		border: 1px solid rgba(var(--accent), 25%);
-		background-color: white;
-		padding: 1rem;
-		border-radius: 0.4rem;
-	}
-	.instructions code {
-		font-size: 0.875em;
-		font-weight: bold;
-		background: rgba(var(--accent), 12%);
-		color: rgb(var(--accent));
-		border-radius: 4px;
-		padding: 0.3em 0.45em;
-	}
-	.instructions strong {
-		color: rgb(var(--accent));
-	}
-	.link-card-grid {
-		display: grid;
-		grid-template-columns: repeat(auto-fit, minmax(24ch, 1fr));
-		gap: 1rem;
-		padding: 0;
-	}
-</style>
+<style></style>
