--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -66,7 +66,7 @@ import Footer from "../components/Footer.astro"
               </p>
             </div>
             <img
-              src='/assets/me.png'
+              src='/assets/me.jpg'
               alt='Miguel Meza - Solution and Solution Architect'
               class='relative -z-20 min-w-full max-w-xl rounded-xl shadow-xl lg:row-span-4 lg:w-[64rem]'
               width='2432'
