--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,7 @@
 ---
+import { Image } from "@astrojs/image/components"
+import meImage from "../../public/assets/me.jpg"
+
 import Layout from "../layouts/Layout.astro"
 import Footer from "../components/Footer.astro"
 ---
@@ -65,12 +68,13 @@ import Footer from "../components/Footer.astro"
                 work together to create something unique!
               </p>
             </div>
-            <img
-              src='/assets/me.jpg'
+            <Image
+              src={meImage}
+              width={(200, 400, 800)}
+              format='avif'
+              class={"relative -z-20 min-w-full max-w-xl rounded-xl shadow-xl lg:row-span-4 lg:w-[64rem]"}
+              sizes='(max-width: 800px) 100vw, 800px'
               alt='Miguel Meza - Solution and Solution Architect'
-              class='relative -z-20 min-w-full max-w-xl rounded-xl shadow-xl lg:row-span-4 lg:w-[64rem]'
-              width='2432'
-              height='1442'
             />
             <div
               class='max-w-xl lg:row-start-3 lg:mt-10 lg:max-w-md lg:border-t lg:border-white/10 lg:pt-10'
