--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -70,7 +70,7 @@ import Footer from "../components/Footer.astro"
             </div>
             <Image
               src={meImage}
-              width={800}
+              width={(200, 400, 800)}
               aspectRatio='20:21'
               format='avif'
               class={"relative -z-20 min-w-full max-w-xl rounded-xl shadow-xl lg:row-span-4 lg:w-[64rem]"}
