--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -73,7 +73,7 @@ import Footer from "../components/Footer.astro"
               width={(200, 400, 800)}
               aspectRatio='20:21'
               format='avif'
-              class={"relative -z-20 min-w-full max-w-xl rounded-xl shadow-xl lg:row-span-4 lg:w-[64rem]"}
+              class={"hidden md:block relative -z-20 min-w-full max-w-xl rounded-xl shadow-xl lg:row-span-4 lg:w-[64rem]"}
               sizes='(max-width: 800px) 100vw, 800px'
               alt='Miguel Meza - Solution and Solution Architect'
             />
